# Membrane-daemon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
membrane-daemon/: Cargo.toml
membrane-daemon/src/: audit.rs  config.rs  lib.rs  main.rs  pairing.rs  paths.rs  rpc.rs  tunnel.rs
membrane-daemon/src/handlers/: exec.rs  list_dir.rs  mod.rs  ping.rs  read_file.rs  write_file.rs
membrane-daemon/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
membrane-wire/: Cargo.toml
membrane-wire/src/: lib.rs
scripts/: fetch-release.sh
