[package]
name = "membrane-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Adam Thompson <adam@informationpatterns.com>"]
description = "Customer-side daemon for the membrane cloud. Bridges your local files to a remote MCP-speaking cloud over QUIC + mTLS, under explicit local policy."
repository = "https://github.com/adamth0mps0n/Membrane-daemon"
readme = "../README.md"

[features]
# `dev-cert` re-enables a NoVerify server-cert verifier for local
# integration testing against a mock cloud. NEVER enable in release
# builds — it makes the daemon accept any peer cert.
dev-cert = []

[dependencies]
membrane-wire = { path = "../membrane-wire" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
directories = "5"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tempfile = "3"
base64 = "0.22"

# Async runtime + QUIC (added in step 3).
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync", "io-util", "io-std"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring", "x509-parser"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
blake3 = "1"
bincode = "1"

# HTTP client for the `--enrol` flow (POST CSR to cloud, receive token).
# Native-roots so the daemon can verify the cloud's TLS cert during enrolment.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "blocking"] }

# Platform-specific service management — only pulled on the target OS.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"

[lib]
name = "membrane_daemon"
path = "src/lib.rs"

[[bin]]
name = "membrane-daemon"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "net"] }
# Serialises tests that mutate process-global state (HOME env var) so
# they don't race in parallel runs. Used by audit::tests.
serial_test = "3"
